--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,14 @@ dependencies:
   path_provider: ^2.0.8
   permission_handler: ^8.3.0
   get: ^4.5.1
+  provider: ^6.0.2
+  contacts_service: ^0.6.3
+  laravel_echo: ^1.0.0-beta.1
+  flutter_local_notifications: ^9.2.0
+  shimmer: ^2.0.0
+  flutter_spinkit: ^5.1.0
+  socket_io_client: ^1.0.1
+  web_socket_channel: ^2.1.0
 
   # side_header_list_view: ^1.0.0-nullsafety.0
   # side_header_list_view: ^0.0.4
