--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,12 +51,20 @@ dependencies:
   get: ^4.5.1
   provider: ^6.0.2
   contacts_service: ^0.6.3
-  laravel_echo: ^1.0.0-beta.1
-  flutter_local_notifications: ^9.2.0
+  # laravel_echo: ^1.0.0-beta.1
   shimmer: ^2.0.0
   flutter_spinkit: ^5.1.0
   socket_io_client: ^1.0.1
   web_socket_channel: ^2.1.0
+  flutter_local_notifications: ^9.3.2
+  pusher_client:
+    git:
+      url: git://github.com/nizwar/pusher_client.git
+  laravel_echo:
+    git:
+      url: https://github.com/kakajansh/echo
+  web_socket_io: ^0.0.1  
+  rxdart: ^0.27.3  
 
   # side_header_list_view: ^1.0.0-nullsafety.0
   # side_header_list_view: ^0.0.4
